--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/CloudStorage
 spring.datasource.username=postgres
 spring.datasource.password=123
-spring.jpa.generate-ddl=true
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
