--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>3.1.4</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
